--- a/css/styles.css
+++ b/css/styles.css
@@ -10149,7 +10149,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/tenor-2.gif");
+  background-image: url("tenor-2.gif");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
