--- a/css/styles.css
+++ b/css/styles.css
@@ -10149,8 +10149,8 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("tenor-2.gif");
-  background-repeat: repeat;
+  background-image: url("15740.jpg");
+  background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
