--- a/css/styles.css
+++ b/css/styles.css
@@ -10148,7 +10148,7 @@ header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
   text-align: center;
-  color: #fff;
+  color: #cccc;
   background-image: url("15740.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
